# human_analysis_automation

Analysis/: CMakeLists.txt
Analysis/AngularMomentum/: CMakeLists.txt  main.cpp
Analysis/CMC/: CMakeLists.txt  main.cpp
Analysis/CMC/setup/: setup_from_gui.xml  sub06_CMC_Actuators.xml  sub06_CMC_ControlConstraints.xml  sub06_CMC_Tasks.xml  sub06_Setup_CMC.xml  sub06_model_CMC.osim
Analysis/ID/: CMakeLists.txt  main.cpp
Analysis/IK/: CMakeLists.txt  main.cpp
Analysis/IK/matlab/: main.m  preprocessData.m  readAllAllData.m  readAllData.m
Analysis/IK/matlab/CoM/: com_analyze_Setup.xml  com_analyze_Setup_CMC.xml  main.m
Analysis/IK/setup/: sub_ik_setup.xml
Analysis/Matlab/: angularMomentum.m  angular_momentum.eps  avg_val.mat  fits.mat  fits_WCB.mat  fits_grf.mat  fits_q0.mat  humanDataCoM.mat  mainFootControl.m  mainFootPlacement.m  mainFootPlacementDetailed.m  mainFootPlacementGRF.m  mainID.m  mainIK.m  mainIK2.m  mainIROS2022.m  mainStiffness.m  mainVPP.m  mainWCB2022.m  mainX0.m  muscles.txt  readAllData.m  timeEvents.mat  xcomEvents.mat  xysol.mat  zsw.mat
Analysis/Matlab/figures/report/: angular_momentum_00_10_10.eps  com_fits_all.eps  com_trials_00_10_10.eps  dcom_trials_00_10_10.eps  joint_angles_00_10_10.eps  stepsize_all.eps
Analysis/Matlab/old_CMC/: loadGroupsAndMuscles.m  loadHeaderStrings.m  mainCMC.m  mainCMCCorrelation.m  mainZsw.m
Analysis/RRA/: CMakeLists.txt  main.cpp
Analysis/RRA/example/: gait2354_RRA_ControlConstraints.xml
Analysis/RRA/setup/: coordinates.txt  setup_from_gui.xml  setup_from_gui_to_cpp.xml  sub06_RRA_Actuators.xml  sub06_RRA_ControlConstraints.xml  sub06_RRA_Tasks.xml  sub06_Setup_RRA.xml
Analysis/Random/: CMakeLists.txt  main.cpp
Analysis/Random/files/: sub06_model.osim  sub06_model_Rajagopal.osim
Analysis/ToCode/: CMakeLists.txt  main.cpp
Analysis/ToCode/results/: body_01-01.m
sub06/GRFMot/: grf-01-01.mot  (+70 more)
(+370 files in other folders)
